gitops/base/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: cloudlaunch
  labels:
    app.kubernetes.io/name: cloudlaunch
    app.kubernetes.io/managed-by: argocd
